--- a/public/map.html
+++ b/public/map.html
@@ -1,4 +1,14 @@
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131523271-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-131523271-1');
+    </script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -11,10 +21,21 @@
 
 </head>
 <body>
+
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2';
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+
     <div id="mcmap"></div>
     <div id="indicator-box">
-        <div class="fb-like" data-href="http://carparks.jtlx.me" data-width="100" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
-        <a class="github-button" href="https://github.com/jtlx/sg-carparks" data-count-href="/jtlx/sg-carparks/stargazers" data-count-api="/repos/jtlx/sg-carparks#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star jtlx/sg-carparks on GitHub">Star</a>
+        <div class="fb-like" data-href="http://carparks.jtlx.me" data-width="100" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
+        <a class="github-button" href="https://github.com/jtlx/sg-carparks" aria-label="Star jtlx/sg-carparks on GitHub">Star</a>
     </div>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
 
