--- a/public/map.html
+++ b/public/map.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
     <link rel="stylesheet" href="style.css" />
+    <meta property="og:title" content="SG Live Carpark Availability Map" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://carparks.jtlx.com" />
+    <meta property="og:image" content="https://i.imgur.com/tudT4HS.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
@@ -33,6 +37,8 @@
 
     <div id="mcmap"></div>
     <div id="indicator-box">
+        <p>Zoom all the way to see details.</p>
+        <p>Numbers represent lots available.</p>
         <div class="fb-like" data-href="http://carparks.jtlx.me" data-width="100" data-layout="button_count" data-action="like" data-size="small" data-show-faces="false" data-share="true"></div>
         <a class="github-button" href="https://github.com/jtlx/sg-carparks" aria-label="Star jtlx/sg-carparks on GitHub">Star</a>
     </div>
